--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.3.1
 certifi==2020.12.5
 chardet==4.0.0
 cloudinary==1.25.0
+dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.4
 Django==3.1.7
 django-crispy-forms==1.11.2
+django-heroku==0.3.1
 djangorestframework==3.12.4
 gunicorn==20.1.0
 idna==2.10
